2006-07-26:
	* src/auth.c(pam_sm_authenticate): always specify the current real
	UID and GID when creating temporary v4 credential files.
	* src/stash.c(_pam_krb5_stash_clone): build the new ccache name by
	appending the mkstemp template instead of assuming the previous file
	ended with one
	* configure.ac: check for "long long" explicitly
	* src/storetmp.c(_pam_krb5_storetmp_data): use a long long print
	specifier only if we actually have a "long long" type.  Fix incorrect
	usage of sigaction.

2006-07-25:
	* src/stash.c(_pam_krb5_stash_external_read): note when we try to
	pick up external creds, and when we fail to do so.
	* src/storetmp.c(_pam_krb5_storetmp_data): save and set signal handlers
	before we fork().  Go back to allowing setuid/setgid to fail, but only
	after we attempt to drop setuid/setgid status (which gets to fail, too,
	but renders the helper unuseful).
	* src/sly.c,src/sly.h(_pam_krb5_sly_looks_unsafe,
	_pam_krb5_sly_maybe_refresh): move detection of whether or not it
	looks safe into another function.
	* src/auth.c(pam_sm_setcred): if it doesn't look safe to refresh
	credentials, just return PAM_IGNORE (#197428).
	* src/storetmp.c(_pam_krb5_storetmp_data): save and restore the SIGPIPE
	handler in case our child exits, drop any setuid/setgid pretense
	when we're called from a setuid application (#190159, patch by Jon
	Fautley), bail early if calls to setuid/setgid fail.
	* configure.ac: look for krb5/krb5.h in preference to krb5.h (new in
	MIT Kerberos 1.5)
	* src/stash.c(_pam_krb5_stash_external_read): if the default principal
	in the ccache doesn't match the userinfo structure, update the
	userinfo structure, based on patch from Jan Iven (#182239,#197660).
	* src/v4.c(v4save): always use the name of the v5 principal when saving
	credentials, especially for the "external" case where it may not be the
	value we originally guessed (#197660).
	* src/pam_krb5.5.in: note that the krb4_convert_524 and krb4_use_as_req
	options don't affect each other.