@@ -1,4 +1,7 @@
 2006-07-26:
+	* src/session.c(pam_sm_open_session): specify the current real
+	UID and GID when creating temporary v4 credential files.  Note the
+	guessed UID and GID of the user in the debug message.
 	* src/auth.c(pam_sm_authenticate): always specify the current real
 	UID and GID when creating temporary v4 credential files.
 	* src/stash.c(_pam_krb5_stash_clone): build the new ccache name by
